--- a/src/app/books/books.component.html
+++ b/src/app/books/books.component.html
@@ -61,17 +61,17 @@
                         <input type="hidden" class="form-control" id="Email" name="_id" value="{{i._id}}" placeholder="Enter title of the book">
                         <div class="form-group mx-sm-3 mb-2">
                           <label for="exampleInputEmail1">title</label>
-                          <input type="text" class="form-control" id="Email" name="title"   [(ngModel)]="book.title" placeholder="Enter name of the author">
+                          <input type="text" class="form-control" id="Email" name="title"   [(ngModel)]="book.title" placeholder="Enter title of book">
                           
                         </div><br>
                         <div class="form-group mx-sm-3 mb-2">
                           <label for="exampleInputEmail1">Author </label>
-                          <input type="text" class="form-control" id="number" name="author"[(ngModel)]="book.author" placeholder="Enter the genre of author">
+                          <input type="text" class="form-control" id="number" name="author"[(ngModel)]="book.author" placeholder="Enter the name of author">
                           <small id="numberhelp" class="form-text text-muted"></small>
                         </div><br>
                         <div class="form-group mx-sm-3 mb-2">
                           <label for="exampleInputEmail1">genre</label>
-                          <input type="text" class="form-control" id="number" name="genre" [(ngModel)]="book.genre"placeholder="Enter the  books written (seperate by commas)">
+                          <input type="text" class="form-control" id="number" name="genre" [(ngModel)]="book.genre"placeholder="Enter the genre">
                           <small id="numberhelp" class="form-text text-muted"></small>
                         </div><br>
                         <div class="form-group mx-sm-3 mb-2">
@@ -142,22 +142,22 @@
                       <input type="hidden" class="form-control" id="Email" name="_id" value="" placeholder="Enter title of the book">
                       <div class="form-group mx-sm-3 mb-2">
                         <label for="exampleInputEmail1">title</label>
-                        <input type="text" class="form-control" id="Email" name="title"   [(ngModel)]="book.title" placeholder="Enter name of the author">
+                        <input type="text" class="form-control" id="Email" name="title"   [(ngModel)]="book.title" placeholder="Enter name of the title">
                         
                       </div><br>
                       <div class="form-group mx-sm-3 mb-2">
                         <label for="exampleInputEmail1">Author </label>
-                        <input type="text" class="form-control" id="number" name="author"[(ngModel)]="book.author" placeholder="Enter the genre of author">
+                        <input type="text" class="form-control" id="number" name="author"[(ngModel)]="book.author" placeholder="Enter the name of author">
                         <small id="numberhelp" class="form-text text-muted"></small>
                       </div><br>
                       <div class="form-group mx-sm-3 mb-2">
                         <label for="exampleInputEmail1">genre</label>
-                        <input type="text" class="form-control" id="number" name="genre" [(ngModel)]="book.genre"placeholder="Enter the  books written (seperate by commas)">
+                        <input type="text" class="form-control" id="number" name="genre" [(ngModel)]="book.genre"placeholder="Enter the  genre">
                         <small id="numberhelp" class="form-text text-muted"></small>
                       </div><br>
                       <div class="form-group mx-sm-3 mb-2">
                         <label for="exampleInputEmail1">description</label>
-                        <input type="textarea" class="form-control" id="number" name="details" [(ngModel)]="book.details"placeholder="Enter the any details about author ">
+                        <input type="textarea" class="form-control" id="number" name="details" [(ngModel)]="book.details"placeholder="Enter  any details about author ">
                         <small id="numberhelp" class="form-text text-muted"></small>
                       </div><br>
                      
